<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:targetApi="s">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/bc_welcome_bg" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/icon_foreground"
        app:layout_constraintBottom_toTopOf="@id/guide_welcomeTo"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/welcome_primary_color"
        tools:ignore="ContentDescription"
        tools:targetApi="s" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/guide_welcomeTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:maxLines="1"
        android:text="@string/welcome_to"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="57sp"
        app:layout_constraintBottom_toTopOf="@id/guide_videoyou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/guide_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/x"
        android:textColor="@color/welcome_primary_color"
        android:textSize="57sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/guide_videoyou"
        app:layout_constraintStart_toEndOf="@id/guide_videoyou"
        tools:targetApi="s" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/guide_videoyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:maxLines="1"
        android:text="@string/videoyou"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="57sp"
        app:layout_constraintBottom_toTopOf="@id/localeChoose"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/localeChoose"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:layout_height="95dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="25dp"
        android:layout_marginBottom="30dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintBottom_toTopOf="@id/guide_exit">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp">

            <ImageView
                android:id="@+id/d_i_1"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_language_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/welcome_primary_color" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/languageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/d_i_1"
                app:layout_constraintStart_toEndOf="@id/d_i_1"
                app:layout_constraintTop_toTopOf="@id/d_i_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/guide_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/exit_videoyoux"
        android:textColor="@color/welcome_primary_color"
        app:layout_constraintBottom_toBottomOf="@id/guide_getStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_getStart"
        tools:targetApi="s" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_getStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/get_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:visibility="gone"
        android:id="@+id/languageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99444444" />

    <com.google.android.material.card.MaterialCardView
        android:visibility="gone"
        android:id="@+id/languageRoot"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="50dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>